--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "react-scripts": "3.2.0"
   },
   "devDependencies": {
+    "gh-pages": "^6.0.0",
     "typescript": "3.3.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "homepage": "https://lakshya1218.github.io/to-doList",
+
   "browserslist": [
     ">0.2%",
     "not dead",
